# docs/swagger.json
@@ -1,17 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Using a translation service as an example",
-        "title": "guser API",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8820",
-    "basePath": "/v1",
     "paths": {
         "/user/login": {
             "post": {
-                "description": "Login system",
+                "description": "Login system by username and password.\n\n\n## request\n\n| field | type | required | description |\n|:------|:------------|:---:|:----|\n| username | string | Y | user's name. |\n| password | string | Y | user's password. |\n\n\n\n## response\n\n| field | type | description |\n|:------|:----|:------------|\n| errcode | int | error code: 200 - success, 400 - bad request, 404 - not found, 500 - internal server error.|\n| token | string | token string. |\n\n## example\n\n### request\n\n```bash\n\ncurl \"http://localhost:8820/v1/user/login\" \\\n  -i \\\n  -X 'POST' \\\n  -d '{\"username\":\"alice\", \"password\": \"123456\"}' \n\n```\n\n#### response\n\n```json\n\nHTTP/1.1 200 OK\nContent-Type: application/json; charset=utf-8\nDate: Mon, 19 Sep 2022 11:21:54 GMT\nContent-Length: 45\n\n{\n    \"errcode\": 0,\n    \"data\": \"fsdafsdafsafasdfsdafsdafsdafsdafsd\"\n}\n\n```\n\n",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "login"
+                    "user"
                 ],
                 "summary": "Login",
                 "operationId": "login",
@@ -30,7 +25,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.doLoginRequest"
+                            "$ref": "#/definitions/internal_controller_http_v1.doLoginRequest"
                         }
                     }
                 ],
@@ -38,19 +33,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.loginResponse"
+                            "$ref": "#/definitions/internal_controller_http_v1.loginResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1.response"
+                            "$ref": "#/definitions/entity.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/entity.HTTPError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/v1.response"
+                            "$ref": "#/definitions/entity.HTTPError"
                         }
                     }
                 }
@@ -58,7 +59,7 @@
         },
         "/user/loginwx": {
             "post": {
-                "description": "Login system By Weixin",
+                "description": "Login system by weixin.\n\n\n## request\n\n| field | type | required | description |\n|:------|:------------|:---:|:----|\n| code | string | Y | weixin auth code. |\n\n\n\n## response\n\n| field | type | description |\n|:------|:----|:------------|\n| errcode | int | error code: 200 - success, 400 - bad request, 404 - not found, 500 - internal server error.|\n| token | string | token string. |\n\n## example\n\n### request\n\n```bash\n\ncurl \"http://localhost:8820/v1/user/loginwx\" \\\n  -i \\\n  -X 'POST' \\\n  -d '{\"code\":\"fsafsdfasfsa\"}' \n\n```\n\n#### response\n\n```json\n\nHTTP/1.1 200 OK\nContent-Type: application/json; charset=utf-8\nDate: Mon, 19 Sep 2022 11:21:54 GMT\nContent-Length: 45\n\n{\n    \"errcode\": 0,\n    \"data\": \"fsdafsdafsafasdfsdafsdafsdafsdafsd\"\n}\n\n```\n\n",
                 "consumes": [
                     "application/json"
                 ],
@@ -66,7 +67,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "loginWx"
+                    "user"
                 ],
                 "summary": "LoginWx",
                 "operationId": "loginWx",
@@ -77,7 +78,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.doLoginWxRequest"
+                            "$ref": "#/definitions/internal_controller_http_v1.doLoginWxRequest"
                         }
                     }
                 ],
@@ -85,19 +86,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.loginWxResponse"
+                            "$ref": "#/definitions/internal_controller_http_v1.loginWxResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1.response"
+                            "$ref": "#/definitions/entity.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/entity.HTTPError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/v1.response"
+                            "$ref": "#/definitions/entity.HTTPError"
                         }
                     }
                 }
@@ -105,72 +112,126 @@
         }
     },
     "definitions": {
-        "v1.doLoginRequest": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "example": "123456"
-                },
-                "username": {
-                    "type": "string",
-                    "example": "alice"
-                }
-            }
-        },
-        "v1.doLoginWxRequest": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "example": "123456"
-                },
-                "username": {
-                    "type": "string",
-                    "example": "alice"
-                }
-            }
-        },
-        "v1.loginResponse": {
+        "entity.HTTPError": {
             "type": "object",
             "properties": {
-                "errcode": {
+                "code": {
                     "type": "integer",
-                    "example": 0
+                    "example": 400
                 },
-                "token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw"
-                }
-            }
-        },
-        "v1.loginWxResponse": {
-            "type": "object",
-            "properties": {
-                "errcode": {
-                    "type": "integer",
-                    "example": 0
-                },
-                "token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw"
-                }
-            }
-        },
-        "v1.response": {
-            "type": "object",
-            "properties": {
                 "message": {
                     "type": "string",
-                    "example": "success"
+                    "example": "status bad request"
+                }
+            }
+        },
+        "guser_internal_controller_http_v1.doLoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "alice"
+                }
+            }
+        },
+        "guser_internal_controller_http_v1.doLoginWxRequest": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "sdfksdfjsaljfsajfsk"
+                }
+            }
+        },
+        "guser_internal_controller_http_v1.loginResponse": {
+            "type": "object",
+            "properties": {
+                "errcode": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw"
+                }
+            }
+        },
+        "guser_internal_controller_http_v1.loginWxResponse": {
+            "type": "object",
+            "properties": {
+                "errcode": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw"
+                }
+            }
+        },
+        "internal_controller_http_v1.doLoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "alice"
+                }
+            }
+        },
+        "internal_controller_http_v1.doLoginWxRequest": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "sdfksdfjsaljfsajfsk"
+                }
+            }
+        },
+        "internal_controller_http_v1.loginResponse": {
+            "type": "object",
+            "properties": {
+                "errcode": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw"
+                }
+            }
+        },
+        "internal_controller_http_v1.loginWxResponse": {
+            "type": "object",
+            "properties": {
+                "errcode": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmUiOjM2MDAsInBhc3N3b3JkIjoiMTIzNDU2IiwidXNlcm5hbWUiOiJhbGljZSJ9.u9Pha5vRrJ5meQasanfshl4hLBghLDzVF0rkX6ZdKLw"
                 }
             }
         }
